ci: fixing names of scripts

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
             - run: |
                   npm ci
             - run: |
-                  npm run all
+                  npm run test
               env:
                   GITHUB_TOKEN: ${{ github.token }}
     test: # make sure the action works on a clean machine without building
