--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
           with:
             name_param: "Yosi"
         - name: 
-          if: ${{ steps.run-the-action.outputs.greeting }} != 'Yosi to test'
+          if: ${{ steps.run-the-action.outputs.greeting }} != 'Yosi => test'
           uses: actions/github-script@v3
           with:
             script: |
