--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,12 +18,13 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v2
+
         - uses: ./
           id: run-the-action
           with:
             name_param: 'Yosi'
         - name: 
-          if: '${{ steps.run-the-action.outputs.greeting }}' != 'Yosi => test'
+          if: "${{ steps.run-the-action.outputs.greeting }}" != "Yosi => test"
           uses: actions/github-script@v3
           with:
             script: |
