--- a/package.json
+++ b/package.json
@@ -37,19 +37,19 @@
     "@ts-tools/node": "^4.0.0",
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
-    "@types/mocha": "^10.0.0",
-    "@types/node": "18",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "@vercel/ncc": "^0.34.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.11.11",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
+    "@vercel/ncc": "^0.36.0",
     "chai": "^4.3.7",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.28.0",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-github": "^4.4.1",
+    "eslint-plugin-github": "^4.6.0",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "mocha": "^10.1.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   }
 }
