--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
-    "@octokit/core": "^6.1.2"
+    "@octokit/core": "^6.1.2",
+    "": "",
+    "chai": "^4.3.10",
+    "eslint": "^8.57.0"
   },
   "devDependencies": {
     "@ts-tools/node": "^5.0.2",
@@ -42,9 +45,9 @@
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "@vercel/ncc": "^0.38.1",
-    "chai": "^4.3.10",
+    "chai": "^5.1.1",
     "chai-as-promised": "^7.1.2",
-    "eslint": "^8.57.0",
+    "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-github": "^4.10.2",
     "eslint-plugin-no-only-tests": "^3.1.0",
