chore(deps): upgrade deps

--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "@types/chai": "^4.3.16",
     "@types/chai-as-promised": "^7.1.8",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@types/node": "version",
+    "@typescript-eslint/eslint-plugin": "version",
+    "@typescript-eslint/parser": "version",
     "@vercel/ncc": "^0.38.1",
-    "chai": "^4.3.10",
+    "chai": "version",
     "chai-as-promised": "^7.1.2",
-    "eslint": "^8.57.0",
+    "eslint": "version",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-github": "^4.10.2",
+    "eslint-plugin-github": "version",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "mocha": "^10.4.0",
     "rimraf": "^5.0.7",
