--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "description": "Core3 github action template",
-  "main": "lib/main.js",
+  "type": "module",
   "scripts": {
     "clean": "rimraf lib dist",
     "prebuild": "npm run clean",
@@ -13,7 +13,7 @@
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "pretest": "npm run typecheck && npm run lint",
-    "test": "mocha \"test/**/*.test.ts\"",
+    "test": "mocha --loader @esbuild-kit/esm-loader \"test/**/*.test.ts\"",
     "prettify": "npx prettier . --write"
   },
   "repository": {
@@ -34,21 +34,22 @@
     "@octokit/core": "^6.1.2"
   },
   "devDependencies": {
+    "@esbuild-kit/esm-loader": "^2.6.5",
     "@ts-tools/node": "^6.0.0",
-    "@types/chai": "^4.3.19",
-    "@types/chai-as-promised": "^7.1.8",
+    "@types/chai": "^5.0.1",
+    "@types/chai-as-promised": "^8.0.1",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.10.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vercel/ncc": "^0.38.3",
-    "chai": "^4.3.10",
-    "chai-as-promised": "^7.1.2",
+    "chai": "^5.1.2",
+    "chai-as-promised": "^8.0.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-github": "^4.10.2",
     "eslint-plugin-no-only-tests": "^3.3.0",
-    "mocha": "^10.8.2",
+    "mocha": "^11.0.1",
     "rimraf": "^6.0.1",
     "typescript": "^5.7.2"
   }
