add build step to workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
+          npm i
+      - run: |
           npm run build
       - uses: ./
         id: run-the-action
